remove pre-written functions in html file

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
-<body onload="insertScore()">
+<body>
     <div class="main">
         <div class="heading">
             Memory Game 🎰
         </div>
         <div id="start">
-            <span id="start_button" class="start-btn" onclick="newGame()">START</span>
+            <span id="start_button" class="start-btn">START</span>
             <div class="leaderboard" id="score">Best Score 🏆: </div>
         </div>
         <div class="game_start">
